<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="?attr/primaryBlackBackground">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_vertical"
            android:orientation="vertical">

            <TextView
                android:id="@+id/settings_title"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingHorizontal="16dp"
                android:paddingTop="16dp"
                android:paddingBottom="12dp"
                android:text="@string/title_settings"
                android:textColor="@color/zetflix_text_primary"
                android:textSize="24sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/settings_general"

                style="@style/SettingsItem"
                android:nextFocusDown="@id/settings_player"
                android:text="@string/category_general" />

            <TextView
                android:id="@+id/settings_player"
                style="@style/SettingsItem"

                android:nextFocusUp="@id/settings_general"
                android:nextFocusDown="@id/settings_ui"
                android:text="@string/category_player" />

            <TextView
                android:id="@+id/settings_ui"
                style="@style/SettingsItem"

                android:nextFocusUp="@id/settings_player"
                android:nextFocusDown="@id/settings_credits"
                android:text="@string/category_ui" />

            <TextView
                android:id="@+id/settings_updates"
                style="@style/SettingsItem"

                android:nextFocusUp="@id/settings_ui"
                android:nextFocusDown="@id/settings_credits"
                android:visibility="gone"
                android:text="@string/category_updates" />

            <TextView
                android:id="@+id/settings_credits"
                style="@style/SettingsItem"
                android:nextFocusUp="@id/settings_ui"
                android:text="@string/category_account" />

            <LinearLayout
                android:id="@+id/app_version_info"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_gravity="center"
                android:orientation="horizontal"
                android:visibility="gone">

                <TextView
                    android:id="@+id/app_version"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:padding="10dp"
                    android:textColor="?attr/textColor"
                    tools:text="0.0.0" />

                <TextView
                    android:id="@+id/delimiter0"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="•"
                    android:textColor="?attr/textColor" />

                <TextView
                    android:id="@+id/commit_hash"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:padding="10dp"
                    android:textColor="?attr/textColor"
                    tools:text="1234567" />

                <TextView
                    android:id="@+id/delimiter1"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="•"
                    android:textColor="?attr/textColor" />

                <TextView
                    android:id="@+id/build_date"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:padding="10dp"
                    android:textColor="?attr/textColor"
                    tools:text="21/03/2024 09:02 pm" />
            </LinearLayout>
        </LinearLayout>
    </ScrollView>
</androidx.constraintlayout.widget.ConstraintLayout>